--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="">lib.utils</a>
+<a href="https://raw.githubusercontent.com/marinrusu1997/thermopylae/master/packages/lib.utils/doc/html/index.html">lib.utils</a>
